--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
+.main{
+  background: linear-gradient(to right, #243949 0%, #517fa4 100%);
+  min-height: 100vh;
+}
+.nav{
+  display: inline-block;
+  padding: 10px;
+  align-items: center;
+  width: 100%;
+}
+.navhead{
+  padding: 10px;
+  font-weight: bold;
+  font-size: large;
+  margin-left: 100px;
+}
+.navhead:hover{
+  transition: 1s;
+  font-size: larger;
+}
+.name{
+  font-weight: bolder;
+  font-size: xx-large;
+  margin-left: 30px;
+}
+input{
+  margin-left: 100px;
+  size: 50px;
+  background-color: #243949;
+  height: 20px;
+  border-radius: 999px 999px 999px 999px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a:hover{
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.clicks{
+  padding: 50px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button{
+  padding: 50px;
+  margin-top: 100px;
+  margin-left: 100px;
+  border-radius: 999px 999px 999px 999px;
+  width: 300px;
+  background-color: silver;
+  font-weight: bold;
+  font-size: large;
 }
-
-.App-link {
-  color: #61dafb;
+.nav img{
+  height: 65px;
+  width: 85px;
+  object-fit: none;
+  border-radius: 999px 999px 999px 999px ;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a{
+  text-decoration: none;
+  color: black;
+}
+.nav img:hover{
+  transition: 0.5s;
+  object-fit: contain;
+}
+button:hover{
+  transition: 0.5s;
+  color: blanchedalmond;
+  background-color: grey;
+}
+h1{
+  margin-left: 80px;
+}
+ul{
+  margin-left: 100px;
+}
+li{
+  padding: 10px;
+  font-weight: bold;
+  font-size: large;
 }
